--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "lib": ["ES2020"],
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "inlineSources": true
   },
   "include": ["src"]
 }
