--- a/package.json
+++ b/package.json
@@ -64,12 +64,19 @@
     "publish": "pnpm run compile && vsce publish",
     "icon:png": "pnpm run icon:png:128 && pnpm run icon:png:256",
     "icon:png:128": "pnpm dlx @resvg/resvg-js-cli images/icon.svg images/icon.png",
-    "icon:png:256": "pnpm dlx @resvg/resvg-js-cli images/icon.svg images/icon@256.png 2"
+    "icon:png:256": "pnpm dlx @resvg/resvg-js-cli images/icon.svg images/icon@256.png 2",
+    "format": "prettier --write .",
+    "check": "pnpm run lint:prettier && pnpm run lint:eslint && pnpm run lint:tsc",
+    "lint:prettier": "prettier --check",
+    "lint:tsc": "tsc --noEmit",
+    "lint:eslint": "eslint . --ext .ts"
   },
   "devDependencies": {
     "@types/node": "^24.6.2",
     "@types/vscode": "^1.104.0",
     "@vscode/vsce": "^2.30.0",
+    "eslint": "^9.37.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.9.3"
   },
   "packageManager": "pnpm@10.18.0"
