--- a/package.json
+++ b/package.json
@@ -67,17 +67,30 @@
     "icon:png:256": "pnpm dlx @resvg/resvg-js-cli images/icon.svg images/icon@256.png 2",
     "format": "prettier --write .",
     "check": "pnpm run lint:prettier && pnpm run lint:eslint && pnpm run lint:tsc",
-    "lint:prettier": "prettier --check",
+    "lint:prettier": "prettier --check .",
     "lint:tsc": "tsc --noEmit",
     "lint:eslint": "eslint . --ext .ts"
   },
   "devDependencies": {
     "@types/node": "^24.6.2",
     "@types/vscode": "^1.104.0",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "@vscode/vsce": "^2.30.0",
     "eslint": "^9.37.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.3",
     "prettier": "^3.6.2",
     "typescript": "^5.9.3"
   },
-  "packageManager": "pnpm@10.18.0"
+  "packageManager": "pnpm@10.18.0",
+  "lint-staged": {
+    "*.ts": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{json,md,mdx,yml,yaml}": [
+      "prettier --write"
+    ]
+  }
 }
