--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,4 @@
-# .gitignore
-
-# Inspired by Apathetic-Tools · MIT
-# https://github.com/apathetic-tools/snippets/blob/main/docs/windows/development-setup
+# .prettierignore
 
 # VS Code extension packaging
 *.vsix
@@ -18,6 +15,7 @@ node_modules/
 package-lock.lock
 package-lock.json
 yarn.lock
+pnpm-lock.yaml
 
 # logs
 npm-debug.log*
@@ -25,27 +23,6 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 .pnpm-debug.log*
-
-# environment variables
-.env
-.env.production
-!.env.example
-
-# IDE environments
-# encourage VSCode usage
-.vscode/* 
-.idea/
-.vimrc
-.nanorc
-.stackblitzrc
-sandbox.config.json
-
-# Add local workspace settings (commit these)
-!.vscode/extensions.json
-!.vscode/launch.json
-!.vscode/tasks.json
-!.vscode/settings.json
-!file-header.code-workspace
 
 # macOS-specific files
 .DS_Store
@@ -67,11 +44,5 @@ Desktop.ini
 # Fonts / other generated assets
 **/_fonts/brand/
 
-# Github configuration
-!.github/
-
 # Husky hooks (commit these)
 !.husky/
-
-
-
