--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@typescript-eslint/parser": "^8.45.0",
     "@vscode/vsce": "^2.30.0",
     "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.3",
     "prettier": "^3.6.2",
