--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,11 @@
 {
   "recommendations": [
+    "ms-vscode-remote.remote-wsl",
     "editorconfig.editorconfig",
     "ms-vscode-remote.remote-wsl",
-    "bierner.github-markdown-preview"
+    "bierner.github-markdown-preview",
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint"
   ],
   "unwantedRecommendations": []
 }
