--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,19 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
     "target": "ES2020",
+    "lib": ["ES2020"],
+    "module": "CommonJS",
     "outDir": "dist",
     "rootDir": "src",
-    "lib": ["ES2020"],
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
-    "inlineSources": true
+    "inlineSources": true,
+    "declaration": false,
+    "moduleResolution": "node"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", ".vscode-test"]
 }
