--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,13 @@
 # Inspired by Apathetic-Tools · MIT
 # https://github.com/apathetic-tools/snippets/blob/main/docs/windows/development-setup
 
-# VS Code extension packaging
-*.vsix
-
-# build output
+# Build output
 dist/
 out/
 *.tsbuildinfo
+*.vsix
 
-# dependencies
+# Dependencies
 .pnpm-store
 node_modules/
 .pnpm/
@@ -19,14 +17,14 @@ package-lock.lock
 package-lock.json
 yarn.lock
 
-# logs
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 .pnpm-debug.log*
 
-# environment variables
+# Environment variables
 .env
 .env.production
 !.env.example
@@ -47,10 +45,9 @@ sandbox.config.json
 !.vscode/settings.json
 !file-header.code-workspace
 
-# macOS-specific files
+# System Files
 .DS_Store
-
-# windows specific files
+ific files
 Thumbs.db
 ehthumbs.db
 Desktop.ini
