--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "lint:fix:eslint": "eslint . --ext .ts --fix"
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@types/node": "^24.6.2",
     "@types/vscode": "^1.104.0",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
@@ -83,9 +84,11 @@
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
+    "jiti": "^2.6.1",
     "lint-staged": "^16.2.3",
     "prettier": "^3.6.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0"
   },
   "packageManager": "pnpm@10.18.0",
   "lint-staged": {
