--- a/package.json
+++ b/package.json
@@ -57,11 +57,11 @@
     }
   },
   "scripts": {
-    "compile": "tsc -p .",
+    "build": "tsc -p .",
     "watch": "tsc -w -p .",
     "dev": "pnpm run watch",
-    "package": "pnpm run compile && vsce package",
-    "publish": "pnpm run compile && vsce publish",
+    "package": "pnpm run build && vsce package",
+    "publish": "pnpm run build && vsce publish",
     "icon:png": "pnpm run icon:png:128 && pnpm run icon:png:256",
     "icon:png:128": "pnpm dlx @resvg/resvg-js-cli images/icon.svg images/icon.png",
     "icon:png:256": "pnpm dlx @resvg/resvg-js-cli images/icon.svg images/icon@256.png 2",
